crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_fase2.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.ambiguous_dispatch

  × dispatch ambíguo: múltiplas sobrecargas compatíveis para `-`
  [Failed to read contents for label `dispatch ambíguo` (offset: 3192, length: 5): OutOfBounds]
