crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_fase3.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.no_overload

  × nenhuma sobrecarga compatível para `echo` com os argumentos fornecidos
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_fase3.kata:5:5]
 4 │     echo!(3.14)
 5 │     echo!(())
   ·     ───────
   ╰────
