crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_fatorial.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
[resolution] warning: `read` tem overloads com aridades diferentes (1 vs 2) — aridade padrão = 1 (primeira declaração)
[resolution] warning: `read` tem overloads com aridades diferentes (1 vs 2) — aridade padrão = 1 (primeira declaração)
Error: parse.unexpected_token

  × token inesperado: esperado ``fat_tail` tem aridade padrão 2 — excesso de
  │ argumentos posicionais. Use `fat_tail{...}` para aridade diferente ou
  │ separe com quebra de linha.`, encontrado `$`
