crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_fibonacci_shadow.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error:   × erro de resolução (Pass 1): [UnknownDirective { name: "heapstack",
  │ context: "sig", item_name: "fib" }]
