crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_fizzbuzz.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
parse.unexpected_token

  × token inesperado: esperado ``=` tem aridade padrão 2 — excesso de
  │ argumentos posicionais. Use `={...}` para aridade diferente ou separe com
  │ quebra de linha.`, encontrado `(`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_fizzbuzz.kata:8:17]
 7 │     with
 8 │         fizz := = 0 $(mod x 3)
   ·                 ──────
 9 │         buzz := = 0 mod x 5
   ╰────

parse.unexpected_token

  × token inesperado: esperado `expression`, encontrado `<DEDENT>`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_fizzbuzz.kata:1:1]
 1 │ fizzbuzz :: Int => Text
   · ▲
 2 │ lambda x:
   ╰────

parse.unexpected_token

  × token inesperado: esperado `expression`, encontrado `<DEDENT>`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_fizzbuzz.kata:1:1]
 1 │ fizzbuzz :: Int => Text
   · ▲
 2 │ lambda x:
   ╰────

Error:   × 3 erro(s) encontrado(s)
