crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_float_simple.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.mismatch

  × tipo incompatível: esperado `Struct("Bool") (hint de retorno)`, encontrado
  │ `nenhuma overload de > retorna tipo compatível com Struct("Bool")`
