crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_heapstack.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error:   × erro de resolução (Pass 1): diretiva `heapstack` não reconhecida em action
  │ `loop_controlado`
