crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_imports.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.unbound_name

  × nome `$` não está no escopo
